--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,9 +2,7 @@ name = "zufallstour-3000"
 main = "src/worker.js"
 compatibility_date = "2024-05-01"
 
-[assets]
-directory = "dist"
-binding = "ASSETS"
+assets = { directory = "dist", binding = "ASSETS" }
 
 [[kv_namespaces]]
 binding = "DB"
