--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "test": "vitest run",
-    "deploy": "wrangler deploy --config wrangler.toml --env production",
-    "deploy:preview": "wrangler deploy --config wrangler.toml --env preview"
+    "deploy": "wrangler versions upload --config wrangler.toml",
+    "deploy:preview": "wrangler versions upload --config wrangler.toml"
   },
   "dependencies": {
     "lucide-react": "^0.539.0",
