--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "test": "vitest run",
-    "deploy": "wrangler versions upload --config wrangler.toml",
-    "deploy:preview": "wrangler versions upload --config wrangler.toml"
+    "deploy": "wrangler deploy --config wrangler.toml --env production",
+    "deploy:preview": "wrangler deploy --config wrangler.toml --env preview"
   },
   "dependencies": {
     "lucide-react": "^0.539.0",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "wrangler": "^4.28.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
@@ -31,7 +32,6 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.11",
     "vite": "^7.1.0",
-    "vitest": "^1.6.0",
-    "wrangler": "^4.28.1"
+    "vitest": "^1.6.0"
   }
 }
