--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,5 +1,5 @@
 name = "zufallstour-3000"
-main = "src/worker.js"
+main = "src/worker.ts"
 compatibility_date = "2024-05-01"
 
 assets = { directory = "dist", binding = "ASSETS" }
