--- a/package.json
+++ b/package.json
@@ -31,8 +31,6 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.11",
     "vite": "^7.1.0",
-    "vitest": "^1.6.0",
-    "typescript": "^5.6.3",
-    "@types/node": "^22.7.4"
+    "vitest": "^1.6.0"
   }
 }
